# rust-template-general

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml
src/: lib.rs  main.rs
